--- a/yolo_head_training/Makefile
+++ b/yolo_head_training/Makefile
@@ -1,2 +1,5 @@
 yolo_3dheads_m:
-	python train.py --config-name=yolo_3dheads_m dataset_params.data_dir=/home/bloodaxe/data/VGGHead num_gpus=4 multi_gpu=DDP
+	python train.py --config-name=yolo_3dheads_m \
+    dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/train \
+    dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/val \
+    num_gpus=4 multi_gpu=DDP
