--- a/yolo_head_training/Makefile
+++ b/yolo_head_training/Makefile
@@ -11,6 +11,7 @@ yolo_3dheads_m_mixup:
 	python train.py --config-name=yolo_3dheads_m \
     dataset_params=vgg_head_mixup \
     dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/train \
+    dataset_params.train_dataloader_params.batch_size=16 \
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/val \
     num_gpus=4 multi_gpu=DDP
 
@@ -18,5 +19,6 @@ yolo_3dheads_m_mosaic:
 	python train.py --config-name=yolo_3dheads_m \
     dataset_params=vgg_head_mosaic \
     dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/train \
+    dataset_params.train_dataloader_params.batch_size=16 \
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/val \
     num_gpus=4 multi_gpu=DDP
