--- a/yolo_head_training/configs/training_hyperparams/vgg_head_train_params.yaml
+++ b/yolo_head_training/configs/training_hyperparams/vgg_head_train_params.yaml
@@ -7,7 +7,7 @@ warmup_initial_lr:  1e-6
 lr_warmup_steps: 128
 lr_warmup_epochs: 1
 
-initial_lr:  2e-3
+initial_lr:  1e-4
 lr_mode: cosine
 cosine_final_lr_ratio: 0.05
 max_epochs: 100
@@ -18,17 +18,17 @@ batch_accumulate: 1
 average_best_models: True
 save_ckpt_epoch_list: []
 
-loss: yolo_nas_pose_loss
+loss: YoloHeadsLoss
 
 criterion_params:
-    oks_sigmas: ${dataset_params.oks_sigmas}
+    oks_sigma: ${dataset_params.oks_sigma}
+    num_joints: ${dataset_params.num_joints}
     classification_loss_weight: 1.0
     classification_loss_type: focal
     regression_iou_loss_type: ciou
-    iou_loss_weight: 2.5
+    iou_loss_weight: 1.0
     dfl_loss_weight: 0.01
-    pose_cls_loss_weight: 1.0
-    pose_reg_loss_weight: 34.0
+    pose_reg_loss_weight: 1.0
     pose_classification_loss_type: focal
     rescale_pose_loss_with_assigned_score: True
     assigner_multiply_by_pose_oks: True
@@ -39,57 +39,52 @@ optimizer_params:
 
 ema: True
 ema_params:
-  decay: 0.997
-  decay_type: threshold
+  decay_type: exp
+  beta: 50
 
 mixed_precision: True
 sync_bn: False
 
-valid_metrics_list:
-  - KeypointsFailureRate:
-      oks_sigmas: ${dataset_params.oks_sigmas}
-      post_prediction_callback:
-        _target_: super_gradients.training.models.pose_estimation_models.yolo_nas_pose.YoloNASPosePostPredictionCallback
-        pose_confidence_threshold: 0.1
-        nms_iou_threshold: 0.7
-        pre_nms_max_predictions: 300
-        post_nms_max_predictions: 30
+valid_metrics_list: []
+#  - KeypointsFailureRate:
+#      post_prediction_callback:
+#        _target_: yolo_head.yolo_heads_post_prediction_callback.YoloHeadsPostPredictionCallback
+#        confidence_threshold: 0.1
+#        nms_iou_threshold: 0.7
+#        pre_nms_max_predictions: 300
+#        post_nms_max_predictions: 30
 
-  - KeypointsNME:
-      oks_sigmas: ${dataset_params.oks_sigmas}
-      post_prediction_callback:
-        _target_: super_gradients.training.models.pose_estimation_models.yolo_nas_pose.YoloNASPosePostPredictionCallback
-        pose_confidence_threshold: 0.1
-        nms_iou_threshold: 0.7
-        pre_nms_max_predictions: 300
-        post_nms_max_predictions: 30
+#  - KeypointsNME:
+#      post_prediction_callback:
+#        _target_: yolo_head.yolo_heads_post_prediction_callback.YoloHeadsPostPredictionCallback
+#        confidence_threshold: 0.1
+#        nms_iou_threshold: 0.7
+#        pre_nms_max_predictions: 300
+#        post_nms_max_predictions: 30
 
-  - PoseEstimationMetrics:
-      num_joints: ${dataset_params.num_joints}
-      oks_sigmas: ${dataset_params.oks_sigmas}
-      max_objects_per_image: 30
-      post_prediction_callback:
-        _target_: super_gradients.training.models.pose_estimation_models.yolo_nas_pose.YoloNASPosePostPredictionCallback
-        pose_confidence_threshold: 0.01
-        nms_iou_threshold: 0.7
-        pre_nms_max_predictions: 300
-        post_nms_max_predictions: 30
+#  - PoseEstimationMetrics:
+#      num_joints: ${dataset_params.num_joints}
+#      oks_sigmas: ${dataset_params.oks_sigmas}
+#      max_objects_per_image: 30
+#      post_prediction_callback:
+#        _target_: yolo_head.yolo_heads_post_prediction_callback.YoloHeadsPostPredictionCallback
+#        confidence_threshold: 0.01
+#        nms_iou_threshold: 0.7
+#        pre_nms_max_predictions: 300
+#        post_nms_max_predictions: 30
 
 
 phase_callbacks:
-  - ExtremeBatchPoseEstimationVisualizationCallback:
-      keypoint_colors: ${dataset_params.keypoint_colors}
-      edge_colors: ${dataset_params.edge_colors}
-      edge_links: ${dataset_params.edge_links}
-      loss_to_monitor: YoloNASPoseLoss/loss
+  - ExtremeBatchYoloHeadsVisualizationCallback:
+      loss_to_monitor: YoloHeadsLoss/loss
       max: True
-      freq: 10
+      freq: 1
       max_images: 16
       enable_on_train_loader: True
       enable_on_valid_loader: True
       post_prediction_callback:
-        _target_: super_gradients.training.models.pose_estimation_models.yolo_nas_pose.YoloNASPosePostPredictionCallback
-        pose_confidence_threshold: 0.1
+        _target_: yolo_head.yolo_heads_post_prediction_callback.YoloHeadsPostPredictionCallback
+        confidence_threshold: 0.1
         nms_iou_threshold: 0.7
         pre_nms_max_predictions: 300
         post_nms_max_predictions: 30
@@ -106,7 +101,7 @@ phase_callbacks:
 
 pre_prediction_callback:
 
-metric_to_watch: 'AP'
-greater_metric_to_watch_is_better: True
+metric_to_watch: 'YoloHeadsLoss/loss'
+greater_metric_to_watch_is_better: False
 
 _convert_: all
