--- a/yolo_head_training/configs/yolo_heads_m.yaml
+++ b/yolo_head_training/configs/yolo_heads_m.yaml
@@ -1,32 +1,18 @@
 defaults:
   - training_hyperparams: vgg_head_train_params
   - dataset_params: vgg_head
-  - arch_params: yolo_nas_pose_m_arch_params
+  - arch_params: yolo_heads_m_arch_params
   - checkpoint_params: default_checkpoint_params
   - _self_
   - variable_setup
 
-architecture: yolo_nas_pose_m
+architecture: YoloHeads
 
 multi_gpu: Off
 num_gpus: 1
 
 experiment_suffix: ""
 experiment_name: vgg_head_${architecture}_${experiment_suffix}_${dataset_params.dataset_params_suffix}
-
-arch_params:
-  num_classes: ${dataset_params.num_joints}
-
-training_hyperparams:
-  initial_lr:  1e-4 # Scale factor to account reduced batch size
-
-  criterion_params:
-    dfl_loss_weight: 0.5
-    pose_reg_loss_weight: 10
-
-  ema_params:
-    decay_type: exp
-    beta: 50
 
 checkpoint_params:
   # For training Yolo-NAS-S pose estimation model we use pretrained weights for Yolo-NAS-S object detection model.
@@ -38,11 +24,9 @@ checkpoint_params:
 
 dataset_params:
   train_dataloader_params:
-    batch_size: 20
     persistent_workers: True
 
   val_dataloader_params:
-    batch_size: 20
     persistent_workers: True
 
 
