--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 torch==2.0.1
-torchvision==0.17.0
+torchvision
 opencv-python==4.9.0.80
 numpy==1.24.4
 diffusers==0.21.4
@@ -8,3 +8,5 @@ fire==0.5.0
 controlnet_aux==0.0.7
 accelerate==0.27.2
 xformers==0.0.20
+gliner
+tensorflow
