--- a/yolo_head_training/configs/dataset_params/vgg_head.yaml
+++ b/yolo_head_training/configs/dataset_params/vgg_head.yaml
@@ -26,14 +26,20 @@ train_dataset_params:
         prob: 0.5
 
     - KeypointsRandomAffineTransform:
-        max_rotation: 5
+        max_rotation: 15
         min_scale: 0.5
-        max_scale: 2.0
+        max_scale: 1.0
         max_translate: 0.1
         image_pad_value: 127
         mask_pad_value: 1
-        prob: 0.75
+        prob: 1.0
         interpolation_mode: [0, 1, 2, 3, 4]
+
+    - KeypointsRandomRotate90:
+        prob: 0.5
+
+    - KeypointsMosaic:
+        prob: 0.5
 
     - KeypointsLongestMaxSize:
         max_height: ${dataset_params.image_size}
@@ -45,6 +51,11 @@ train_dataset_params:
         image_pad_value: [127, 127, 127]
         mask_pad_value: 1
         padding_mode: center
+
+#    - KeypointsMixup:
+#        prob: 0.5
+
+
 
     - KeypointsImageStandardize:
         max_value: 255
