--- a/yolo_head_training/configs/training_hyperparams/vgg_head_train_params.yaml
+++ b/yolo_head_training/configs/training_hyperparams/vgg_head_train_params.yaml
@@ -7,7 +7,7 @@ warmup_initial_lr: 1e-6
 lr_warmup_steps: 128
 lr_warmup_epochs: 1
 
-initial_lr: 1e-4
+initial_lr: 3e-4
 lr_mode: cosine
 cosine_final_lr_ratio: 0.1
 max_epochs: 200
@@ -28,7 +28,7 @@ criterion_params:
   regression_iou_loss_type: ciou
   iou_loss_weight: 2.0
   dfl_loss_weight: 0.01
-  pose_reg_loss_weight: 1.0
+  pose_reg_loss_weight: 5.0
   pose_classification_loss_type: focal
   rescale_pose_loss_with_assigned_score: False
   assigner_multiply_by_pose_oks: False
@@ -37,7 +37,7 @@ optimizer: AdamW
 optimizer_params:
   weight_decay: 0.000001
 
-ema: True
+ema: False
 ema_params:
   decay: 0.9997
   decay_type: exp
@@ -79,7 +79,7 @@ phase_callbacks:
   - ExtremeBatchYoloHeadsVisualizationCallback:
       loss_to_monitor: YoloHeadsLoss/loss
       max: True
-      freq: 10
+      freq: 1
       max_images: 16
       enable_on_train_loader: True
       enable_on_valid_loader: True
