--- a/yolo_head_training/configs/dataset_params/vgg_head.yaml
+++ b/yolo_head_training/configs/dataset_params/vgg_head.yaml
@@ -27,7 +27,7 @@ train_dataset_params:
         prob: 1.0
 
     - KeypointsRandomAffineTransform:
-        max_rotation: 15
+        max_rotation: 45
         min_scale: 0.5
         max_scale: 2.0
         max_translate: 0.1
@@ -39,8 +39,8 @@ train_dataset_params:
     - KeypointsRandomRotate90:
         prob: 1.0
 
-    - KeypointsMosaic:
-        prob: 0.5
+#    - KeypointsMosaic:
+#        prob: 0.5
 
     - KeypointsLongestMaxSize:
         max_height: ${dataset_params.image_size}
