Configs for model with two extra heads

--- a/yolo_head_training/Makefile
+++ b/yolo_head_training/Makefile
@@ -5,4 +5,10 @@ yolo_3dheads_m:
 	python train.py --config-name=yolo_heads_m \
     dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/train \
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/val \
-    num_gpus=4 multi_gpu=DDP
+    num_gpus=4 multi_gpu=DDP batch_size=24
+
+yolo_3dheads_m_large:
+	python train.py --config-name=yolo_heads_m \
+    dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/train \
+    dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/val \
+    num_gpus=4 multi_gpu=DDP batch_size=24
