--- a/yolo_head_training/Makefile
+++ b/yolo_head_training/Makefile
@@ -12,3 +12,6 @@ yolo_3dheads_m_large:
     dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/train \
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/val \
     num_gpus=4 multi_gpu=DDP batch_size=24
+
+yolo_heads_m_small_eugene:
+	python train.py --config-name=yolo_heads_m_small_eugene num_gpus=4 multi_gpu=DDP
