--- a/yolo_head_training/configs/arch_params/yolo_heads_l_arch_params.yaml
+++ b/yolo_head_training/configs/arch_params/yolo_heads_l_arch_params.yaml
@@ -13,7 +13,7 @@ backbone:
           out_channels: 96
           num_blocks: 2
           activation_type: relu
-          hidden_channels: 64
+          hidden_channels: 96
           concat_intermediates: True
 
       - YoloNASStage:
@@ -34,8 +34,8 @@ backbone:
           out_channels: 768
           num_blocks: 2
           activation_type: relu
-          hidden_channels: 384
-          concat_intermediates: False
+          hidden_channels: 512
+          concat_intermediates: True
 
 
     context_module:
@@ -52,8 +52,8 @@ neck:
     neck1:
       YoloNASUpStage:
         out_channels: 192
-        num_blocks: 2
-        hidden_channels: 192
+        num_blocks: 4
+        hidden_channels: 128
         width_mult: 1
         depth_mult: 1
         activation_type: relu
@@ -62,8 +62,8 @@ neck:
     neck2:
       YoloNASUpStage:
         out_channels: 96
-        num_blocks: 3
-        hidden_channels: 64
+        num_blocks: 4
+        hidden_channels: 128
         width_mult: 1
         depth_mult: 1
         activation_type: relu
@@ -72,8 +72,8 @@ neck:
     neck3:
       YoloNASDownStage:
         out_channels: 192
-        num_blocks: 2
-        hidden_channels: 192
+        num_blocks: 4
+        hidden_channels: 128
         activation_type: relu
         width_mult: 1
         depth_mult: 1
@@ -81,7 +81,7 @@ neck:
     neck4:
       YoloNASDownStage:
         out_channels: 384
-        num_blocks: 3
+        num_blocks: 4
         hidden_channels: 256
         activation_type: relu
         width_mult: 1
@@ -89,48 +89,49 @@ neck:
 
 heads:
   YoloHeadsNDFLHeads:
+    num_classes: 413
     reg_max: 16
     heads_list:
       - YoloHeadsDFLHead:
-          bbox_inter_channels: 256
-          flame_inter_channels: 256
+          bbox_inter_channels: 128
+          flame_inter_channels: 128
           flame_regression_blocks: 2
-          flame_shape_inter_channels: 128
-          flame_expression_inter_channels: 64
-          flame_transformation_inter_channels: 16
           shared_stem: False
-          width_mult: 0.75
+          width_mult: 1
           first_conv_group_size: 0
+          num_classes:
           stride: 8
           reg_max: 16
+          cls_dropout_rate: 0.0
+          reg_dropout_rate: 0.0
 
       - YoloHeadsDFLHead:
           bbox_inter_channels: 256
-          flame_inter_channels: 256
+          flame_inter_channels: 512
           flame_regression_blocks: 2
-          flame_shape_inter_channels: 128
-          flame_expression_inter_channels: 64
-          flame_transformation_inter_channels: 16
           shared_stem: False
-          width_mult: 0.75
+          width_mult: 1
           first_conv_group_size: 0
+          num_classes:
           stride: 16
           reg_max: 16
+          cls_dropout_rate: 0.0
+          reg_dropout_rate: 0.0
 
       - YoloHeadsDFLHead:
-          bbox_inter_channels: 256
-          flame_inter_channels: 256
-          flame_regression_blocks: 2
-          flame_shape_inter_channels: 128
-          flame_expression_inter_channels: 64
-          flame_transformation_inter_channels: 16
+          bbox_inter_channels: 512
+          flame_inter_channels: 512
+          flame_regression_blocks: 3
           shared_stem: False
-          width_mult: 0.75
+          width_mult: 1
           first_conv_group_size: 0
+          num_classes:
           stride: 32
           reg_max: 16
+          cls_dropout_rate: 0.0
+          reg_dropout_rate: 0.0
 
 bn_eps: 1e-6
-bn_momentum: 0.1
+bn_momentum: 0.03
 inplace_act: True
 
