--- a/yolo_head_training/configs/arch_params/yolo_heads_n_arch_params.yaml
+++ b/yolo_head_training/configs/arch_params/yolo_heads_n_arch_params.yaml
@@ -6,41 +6,41 @@ backbone:
 
     stem:
       YoloNASStem:
-        out_channels: 48
+        out_channels: 32
 
     stages:
       - YoloNASStage:
-          out_channels: 96
+          out_channels: 64
           num_blocks: 2
           activation_type: relu
-          hidden_channels: 64
-          concat_intermediates: True
+          hidden_channels: 32
+          concat_intermediates: False
 
       - YoloNASStage:
-          out_channels: 192
+          out_channels: 128
           num_blocks: 3
           activation_type: relu
-          hidden_channels: 128
-          concat_intermediates: True
+          hidden_channels: 48
+          concat_intermediates: False
 
       - YoloNASStage:
-          out_channels: 384
-          num_blocks: 5
+          out_channels: 256
+          num_blocks: 4
           activation_type: relu
-          hidden_channels: 256
-          concat_intermediates: True
+          hidden_channels: 64
+          concat_intermediates: False
 
       - YoloNASStage:
-          out_channels: 768
+          out_channels: 512
           num_blocks: 2
           activation_type: relu
-          hidden_channels: 384
+          hidden_channels: 128
           concat_intermediates: False
 
 
     context_module:
       SPP:
-        output_channels: 768
+        output_channels: 512
         activation_type: relu
         k: [5,9,13]
 
@@ -51,9 +51,9 @@ neck:
 
     neck1:
       YoloNASUpStage:
-        out_channels: 192
+        out_channels: 128
         num_blocks: 2
-        hidden_channels: 192
+        hidden_channels: 48
         width_mult: 1
         depth_mult: 1
         activation_type: relu
@@ -61,9 +61,9 @@ neck:
 
     neck2:
       YoloNASUpStage:
-        out_channels: 96
-        num_blocks: 3
-        hidden_channels: 64
+        out_channels: 64
+        num_blocks: 2
+        hidden_channels: 32
         width_mult: 1
         depth_mult: 1
         activation_type: relu
@@ -71,66 +71,65 @@ neck:
 
     neck3:
       YoloNASDownStage:
-        out_channels: 192
+        out_channels: 128
         num_blocks: 2
-        hidden_channels: 192
+        hidden_channels: 48
         activation_type: relu
         width_mult: 1
         depth_mult: 1
 
     neck4:
       YoloNASDownStage:
-        out_channels: 384
-        num_blocks: 3
-        hidden_channels: 256
+        out_channels: 256
+        num_blocks: 2
+        hidden_channels: 48
         activation_type: relu
         width_mult: 1
         depth_mult: 1
 
 heads:
   YoloHeadsNDFLHeads:
+    num_classes: 413
     reg_max: 16
     heads_list:
       - YoloHeadsDFLHead:
-          bbox_inter_channels: 256
-          flame_inter_channels: 256
+          bbox_inter_channels: 128
+          flame_inter_channels: 128
           flame_regression_blocks: 2
-          flame_shape_inter_channels: 128
-          flame_expression_inter_channels: 64
-          flame_transformation_inter_channels: 16
           shared_stem: False
-          width_mult: 0.75
+          width_mult: 0.33
+          
+          
           first_conv_group_size: 0
+          num_classes:
           stride: 8
           reg_max: 16
-
       - YoloHeadsDFLHead:
           bbox_inter_channels: 256
-          flame_inter_channels: 256
+          flame_inter_channels: 512
           flame_regression_blocks: 2
-          flame_shape_inter_channels: 128
-          flame_expression_inter_channels: 64
-          flame_transformation_inter_channels: 16
           shared_stem: False
-          width_mult: 0.75
+          width_mult: 0.33
+          
+          
           first_conv_group_size: 0
+          num_classes:
           stride: 16
           reg_max: 16
-
       - YoloHeadsDFLHead:
-          bbox_inter_channels: 256
-          flame_inter_channels: 256
-          flame_regression_blocks: 2
-          flame_shape_inter_channels: 128
-          flame_expression_inter_channels: 64
-          flame_transformation_inter_channels: 16
+          bbox_inter_channels: 512
+          flame_inter_channels: 512
+          flame_regression_blocks: 3
           shared_stem: False
-          width_mult: 0.75
+          width_mult: 0.33
+          
+          
           first_conv_group_size: 0
+          num_classes:
           stride: 32
           reg_max: 16
 
 bn_eps: 1e-6
-bn_momentum: 0.1
+bn_momentum: 0.03
 inplace_act: True
 
