--- a/yolo_head_training/configs/arch_params/yolo_heads_s_arch_params.yaml
+++ b/yolo_head_training/configs/arch_params/yolo_heads_s_arch_params.yaml
@@ -13,28 +13,28 @@ backbone:
           out_channels: 96
           num_blocks: 2
           activation_type: relu
-          hidden_channels: 64
-          concat_intermediates: True
+          hidden_channels: 32
+          concat_intermediates: False
 
       - YoloNASStage:
           out_channels: 192
           num_blocks: 3
           activation_type: relu
-          hidden_channels: 128
-          concat_intermediates: True
+          hidden_channels: 64
+          concat_intermediates: False
 
       - YoloNASStage:
           out_channels: 384
           num_blocks: 5
           activation_type: relu
-          hidden_channels: 256
-          concat_intermediates: True
+          hidden_channels: 96
+          concat_intermediates: False
 
       - YoloNASStage:
           out_channels: 768
           num_blocks: 2
           activation_type: relu
-          hidden_channels: 384
+          hidden_channels: 192
           concat_intermediates: False
 
 
@@ -53,7 +53,7 @@ neck:
       YoloNASUpStage:
         out_channels: 192
         num_blocks: 2
-        hidden_channels: 192
+        hidden_channels: 64
         width_mult: 1
         depth_mult: 1
         activation_type: relu
@@ -62,8 +62,8 @@ neck:
     neck2:
       YoloNASUpStage:
         out_channels: 96
-        num_blocks: 3
-        hidden_channels: 64
+        num_blocks: 2
+        hidden_channels: 48
         width_mult: 1
         depth_mult: 1
         activation_type: relu
@@ -73,7 +73,7 @@ neck:
       YoloNASDownStage:
         out_channels: 192
         num_blocks: 2
-        hidden_channels: 192
+        hidden_channels: 64
         activation_type: relu
         width_mult: 1
         depth_mult: 1
@@ -81,52 +81,45 @@ neck:
     neck4:
       YoloNASDownStage:
         out_channels: 384
-        num_blocks: 3
-        hidden_channels: 256
+        num_blocks: 2
+        hidden_channels: 64
         activation_type: relu
         width_mult: 1
         depth_mult: 1
 
 heads:
   YoloHeadsNDFLHeads:
+    num_classes: 413 # Num Flame Params
     reg_max: 16
     heads_list:
       - YoloHeadsDFLHead:
-          bbox_inter_channels: 256
-          flame_inter_channels: 256
+          bbox_inter_channels: 128
+          flame_inter_channels: 128
           flame_regression_blocks: 2
-          flame_shape_inter_channels: 128
-          flame_expression_inter_channels: 64
-          flame_transformation_inter_channels: 16
           shared_stem: False
-          width_mult: 0.75
+          width_mult: 0.5
           first_conv_group_size: 0
+          num_classes:
           stride: 8
           reg_max: 16
-
       - YoloHeadsDFLHead:
           bbox_inter_channels: 256
-          flame_inter_channels: 256
+          flame_inter_channels: 512
           flame_regression_blocks: 2
-          flame_shape_inter_channels: 128
-          flame_expression_inter_channels: 64
-          flame_transformation_inter_channels: 16
           shared_stem: False
-          width_mult: 0.75
+          width_mult: 0.5
           first_conv_group_size: 0
+          num_classes:
           stride: 16
           reg_max: 16
-
       - YoloHeadsDFLHead:
-          bbox_inter_channels: 256
-          flame_inter_channels: 256
-          flame_regression_blocks: 2
-          flame_shape_inter_channels: 128
-          flame_expression_inter_channels: 64
-          flame_transformation_inter_channels: 16
+          bbox_inter_channels: 512
+          flame_inter_channels: 512
+          flame_regression_blocks: 3
           shared_stem: False
-          width_mult: 0.75
+          width_mult: 0.5
           first_conv_group_size: 0
+          num_classes:
           stride: 32
           reg_max: 16
 
