--- a/yolo_head_training/configs/dataset_params/vgg_head.yaml
+++ b/yolo_head_training/configs/dataset_params/vgg_head.yaml
@@ -4,17 +4,13 @@ defaults:
 
 # This is a shortcut parameter to set size of training & validation images.
 image_size: 640
-dataset_params_suffix: "${dataset_params.image_size}"
+dataset_params_suffix: "small_${dataset_params.image_size}"
 
 train_dataset_params:
   data_dir: g:/VGGHead/train
   num_joints: ${dataset_params.num_joints}
   mode: train
   transforms:
-#    - KeypointsRandomHorizontalFlip:
-#        flip_index: ${dataset_params.flip_indexes}
-#        prob: 0.5
-
     - KeypointsBrightnessContrast:
         brightness_range: [ 0.8, 1.2 ]
         contrast_range: [ 0.8, 1.2 ]
