--- a/yolo_head_training/Makefile
+++ b/yolo_head_training/Makefile
@@ -25,3 +25,15 @@ yolo_heads_m_large_eugene:
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/large \
     num_gpus=4 multi_gpu=DDP
 
+
+yolo_heads_m_small_albu_eugene:
+	python train.py --config-name=yolo_heads_m_small_eugene dataset_params=vgg_head_small_albu_augs \
+    dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
+    dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
+    num_gpus=4 multi_gpu=DDP
+
+yolo_heads_m_small_albu_eugene_crop_box:
+	python train.py --config-name=yolo_heads_m_small_eugene dataset_params=vgg_head_small_albu_augs_crop_box \
+    dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
+    dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
+    num_gpus=4 multi_gpu=DDP
