--- a/yolo_head_training/configs/training_hyperparams/vgg_head_train_params.yaml
+++ b/yolo_head_training/configs/training_hyperparams/vgg_head_train_params.yaml
@@ -80,7 +80,7 @@ phase_callbacks:
   - ExtremeBatchYoloHeadsVisualizationCallback:
       loss_to_monitor: YoloHeadsLoss/loss
       max: True
-      freq: ${training_params.visualization_frequency_epochs}
+      freq: ${training_hyperparams.visualization_frequency_epochs}
       max_images: 16
       enable_on_train_loader: True
       enable_on_valid_loader: True
