yolo_heads_m_small_medium_albu_augs

--- a/yolo_head_training/Makefile
+++ b/yolo_head_training/Makefile
@@ -37,3 +37,10 @@ yolo_heads_m_small_albu_eugene_crop_box:
     dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
     num_gpus=4 multi_gpu=DDP
+
+yolo_heads_m_small_medium_albu_augs:
+	python train.py --config-name=yolo_heads_m_small_eugene dataset_params=vgg_head_small_medium_albu_augs \
+    dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
+    dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
+    num_gpus=4 multi_gpu=DDP
+
