--- a/yolo_head_training/Makefile
+++ b/yolo_head_training/Makefile
@@ -53,34 +53,23 @@ yolo_heads_m_large_medium_albu_augs_eugene:
 
 yolo_heads_m_small_eugene_grid_search:
 	python train.py --config-name=yolo_heads_m_small_eugene \
-    training_hyperparams.criterion_params.indexes_subset=0.5 experiment_suffix='sparse_05' \
+    training_hyperparams.criterion_params.indexes_subset=head experiment_suffix='_head' \
     dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
     num_gpus=4 multi_gpu=DDP
 	python train.py --config-name=yolo_heads_m_small_eugene \
-    training_hyperparams.criterion_params.indexes_subset=0.4 experiment_suffix='sparse_04' \
+    training_hyperparams.criterion_params.indexes_subset=face experiment_suffix='face' \
     dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
     num_gpus=4 multi_gpu=DDP
 	python train.py --config-name=yolo_heads_m_small_eugene \
-    training_hyperparams.criterion_params.indexes_subset=0.3 experiment_suffix='sparse_03' \
+    training_hyperparams.criterion_params.indexes_subset=face_w_ears experiment_suffix='face_w_ears' \
     dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
     num_gpus=4 multi_gpu=DDP
 	python train.py --config-name=yolo_heads_m_small_eugene \
-    training_hyperparams.criterion_params.indexes_subset=0.2 experiment_suffix='sparse_02' \
+    training_hyperparams.criterion_params.indexes_subset=keypoint_445 experiment_suffix='keypoint_445' \
     dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
     num_gpus=4 multi_gpu=DDP
-	python train.py --config-name=yolo_heads_m_small_eugene \
-    training_hyperparams.criterion_params.indexes_subset=0.1 experiment_suffix='sparse_01' \
-    dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
-    dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
-    num_gpus=4 multi_gpu=DDP
-	python train.py --config-name=yolo_heads_m_small_eugene \
-    training_hyperparams.criterion_params.indexes_subset='445' experiment_suffix='sparse_default' \
-    dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
-    dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
-    num_gpus=4 multi_gpu=DDP
-
 
