--- a/yolo_head_training/configs/training_hyperparams/vgg_head_train_params.yaml
+++ b/yolo_head_training/configs/training_hyperparams/vgg_head_train_params.yaml
@@ -22,7 +22,7 @@ loss: YoloHeadsLoss
 
 criterion_params:
   oks_sigma: ${dataset_params.oks_sigma}
-  #num_joints: ${dataset_params.num_joints}
+  indexes_subset: head # head, face, face_w_ears, keypoint_445
   classification_loss_weight: 1.0
   classification_loss_type: focal
   regression_iou_loss_type: ciou
@@ -32,7 +32,6 @@ criterion_params:
   pose_classification_loss_type: focal
   rescale_pose_loss_with_assigned_score: False
   assigner_multiply_by_pose_oks: False
-  indexes_subset: 0.5
 
 optimizer: AdamW
 optimizer_params:
@@ -49,6 +48,7 @@ sync_bn: False
 
 valid_metrics_list:
   - KeypointsFailureRate:
+      indexes_subset: head
       post_prediction_callback:
         _target_: yolo_head.yolo_heads_post_prediction_callback.YoloHeadsPostPredictionCallback
         confidence_threshold: 0.5
@@ -57,6 +57,7 @@ valid_metrics_list:
         post_nms_max_predictions: 30
 
   - KeypointsNME:
+      indexes_subset: head
       post_prediction_callback:
         _target_: yolo_head.yolo_heads_post_prediction_callback.YoloHeadsPostPredictionCallback
         confidence_threshold: 0.5
@@ -79,6 +80,7 @@ visualization_frequency_epochs: 10
 
 phase_callbacks:
   - ExtremeBatchYoloHeadsVisualizationCallback:
+      indexes_subset: head # head, face, face_w_ears, keypoint_445
       loss_to_monitor: YoloHeadsLoss/loss
       max: True
       freq: ${training_hyperparams.visualization_frequency_epochs}
