--- a/yolo_head_training/configs/yolo_heads_m_large_eugene.yaml
+++ b/yolo_head_training/configs/yolo_heads_m_large_eugene.yaml
@@ -14,6 +14,10 @@ num_gpus: 1
 experiment_suffix: "_new_flame"
 experiment_name: ${hydra:runtime.choices.arch_params}_${hydra:runtime.choices.dataset_params}_${experiment_suffix}
 
+training_hyperparams:
+  visualization_frequency_epochs: 1
+  max_epochs: 50
+
 checkpoint_params:
   # For training Yolo-NAS-S pose estimation model we use pretrained weights for Yolo-NAS-S object detection model.
   # By setting strict_load: key_matching we load only those weights that match the keys of the model.
