--- a/yolo_head_training/configs/dataset_params/vgg_head_large_medium_albu_augs.yaml
+++ b/yolo_head_training/configs/dataset_params/vgg_head_large_medium_albu_augs.yaml
@@ -155,11 +155,11 @@ train_dataset_params:
         max_translate: 0.1
         image_pad_value: 127
         mask_pad_value: 1
-        prob: 0.5
+        prob: 0.35
         interpolation_mode: [0, 1, 2, 3, 4]
 
     - KeypointsRandomRotate90:
-        prob: 0.5
+        prob: 0.2
 
 #    - KeypointsMosaic:
 #        prob: 0.5
@@ -213,7 +213,7 @@ train_dataloader_params:
   num_workers: 8
   drop_last: True
   pin_memory: False
-  collate_fn: YoloNASPoseCollateFN
+  collate_fn: VGGHeadCollateFN
 
 val_dataloader_params:
   dataset: DAD3DHeadsDataset
@@ -221,4 +221,4 @@ val_dataloader_params:
   num_workers: 8
   drop_last: False
   pin_memory: False
-  collate_fn: YoloNASPoseCollateFN
+  collate_fn: VGGHeadCollateFN
