--- a/yolo_head_training/configs/dataset_params/vgg_head_large_medium_aug.yaml
+++ b/yolo_head_training/configs/dataset_params/vgg_head_large_medium_aug.yaml
@@ -187,7 +187,7 @@ train_dataloader_params:
   num_workers: 8
   drop_last: True
   pin_memory: False
-  collate_fn: YoloNASPoseCollateFN
+  collate_fn: VGGHeadCollateFN
 
 val_dataloader_params:
   dataset: DAD3DHeadsDataset
@@ -195,7 +195,7 @@ val_dataloader_params:
   num_workers: 8
   drop_last: False
   pin_memory: False
-  collate_fn: YoloNASPoseCollateFN
+  collate_fn: VGGHeadCollateFN
 
 # TEST
 #test_dataset_params:
