--- a/yolo_head_training/configs/yolo_heads_m_small_eugene.yaml
+++ b/yolo_head_training/configs/yolo_heads_m_small_eugene.yaml
@@ -12,7 +12,7 @@ multi_gpu: Off
 num_gpus: 1
 
 experiment_suffix: ""
-experiment_name: ${hydra:runtime.choices.arch_params}_${hydra:runtime.choices.dataset_params}_${experiment_suffix}
+experiment_name: ${hydra:runtime.choices.arch_params}_${hydra:runtime.choices.dataset_params}_${hydra:runtime.choices.training_hyperparams}_${experiment_suffix}
 
 checkpoint_params:
   # For training Yolo-NAS-S pose estimation model we use pretrained weights for Yolo-NAS-S object detection model.
@@ -31,7 +31,7 @@ dataset_params:
 
   train_dataloader_params:
     persistent_workers: True
-    batch_size: 12
+    batch_size: 8
 
   val_dataloader_params:
     persistent_workers: True
