--- a/yolo_head_training/configs/dataset_params/vgg_head_large_medium_albu_augs.yaml
+++ b/yolo_head_training/configs/dataset_params/vgg_head_large_medium_albu_augs.yaml
@@ -111,32 +111,6 @@ train_dataset_params:
     - split_00099
 
   transforms:
-    - Albumentations:
-        Compose:
-          bbox_params:
-            min_width: 8
-            min_area: 10
-            min_height: 8
-            check_each_transform: True
-            min_visibility: 0.1
-
-          keypoint_params: {}
-          transforms:
-            - ImageCompression:
-                quality_lower: 60
-                quality_upper: 100
-                p: 0.25
-            - MedianBlur:
-                blur_limit: 5
-                p: 0.125
-            - GaussianBlur:
-                blur_limit: 5
-                p: 0.125
-            - RGBShift:
-                p: 0.125
-            - ToGray:
-                p: 0.125
-
     - KeypointsBrightnessContrast:
         brightness_range: [ 0.8, 1.2 ]
         contrast_range: [ 0.8, 1.2 ]
@@ -190,16 +164,15 @@ val_dataset_params:
     - split_00000
     - split_00001
   transforms:
-    - KeypointsLongestMaxSize:
+    - MeshLongestMaxSize:
         max_height: ${dataset_params.image_size}
         max_width: ${dataset_params.image_size}
 
-    - KeypointsPadIfNeeded:
+    - MeshPadIfNeeded:
         min_height: ${dataset_params.image_size}
         min_width: ${dataset_params.image_size}
-        image_pad_value: 127
-        mask_pad_value: 1
-        padding_mode: bottom_right
+        image_pad_value: [ 127, 127, 127 ]
+        padding_mode: center
 
     - KeypointsImageStandardize:
         max_value: 255
